# ttop

./: CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/: lib.rs  main.rs  utils.rs
src/app/: mod.rs  state.rs
src/domain/: mod.rs  process.rs  sort.rs
src/platform/: macos.rs
src/ui/: event.rs  mod.rs  render.rs
tests/: app_test.rs
